# moomoo2

./: .gitignore  Cargo.toml  README.md  TODO  TODO.md  a.js  hall_of_shame.md
server/: Cargo.toml  Containerfile  TODO  build.sh  cert.pem  key.pem  localhost.crt  localhost.key  rustfmt.toml
server/.cargo/: config.toml
server/src/: errors.rs  main.rs  tui.rs
server/src/config/: config.rs  config.toml
server/src/net/: handle_conn.rs  handle_msgs.rs  mod.rs  serialization.rs
server/src/structs/: bevy.rs  components.rs  mod.rs  quadtree.rs  spatial_hash.rs  weapons.rs
server/src/systems/: animal_ai_system.rs  attack_system.rs  attack_system_backup.rs  collision_system.rs  collision_system_old.rs  damage_system.rs  map_system.rs  mod.rs  movement_system.rs
shared/: Cargo.toml
shared/src/: lib.rs  to_client.rs  to_server.rs
shared/src/objects/: mod.rs
shared/src/structs/: client.rs  server.rs
web/: build.js  index.html  mainstyle.css  package.json
web/parser/: Cargo.toml
web/parser/src/: lib.rs
web/src/: App.vue  build.js  game.js  game.ts  main.js  main.ts  packetHandler.js  utils.js
web/src/assets/: player.ts
web/src/objects/: leaf.js  object.js  player.js
web/src/render/: renderer.js
web/src/ui/: actionBar.js  resourceDisplay.js
web2/: index.html
web2/parser/: Cargo.toml  build.sh
web2/parser/.cargo/: config.toml
web2/parser/src/: lib.rs
web2/src/: game.js  utils.js
web2/src/data/: weapons.js
web2/src/libs/: howler.js
web2/src/objects/: camera.js  object.js  player.js
web2/src/render/: renderer.js
web2/src/ui/: actionBar.js  resourceDisplay.js
web3/: index.html  vite.config.js
web3/parser/: Cargo.toml
web3/src/: App.vue  game.js
web3/src/objects/: camera.js  object.js  player.js
web3/src/render/: renderer.js
