[workspace]
members = ["server", "shared", "web/parser"] #, "web/parser"]
resolver = "3"

package.authors = ["nx0ly"]
package.license-file = "LICENSE.md"
package.description = "A multiplayer survival game."
package.keywords = ["moomoo", "cowgame", "moomoo.io", "moomoo2", "moomoo2.io", "new moomoo", "mohmoh", "hack", "mod", "game", "multiplayer", "survival"]

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
strip = true
