[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = "1.6.0"
borsh-derive = "1.6.0"
shared = { path = "../../shared", features = ["web"]}
wasm-bindgen = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde-wasm-bindgen = "0.6.5"
