[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = "1.6.0"
borsh-derive = "1.6.0"
shared = { path = "../../shared", features = ["web"]}
wasm-bindgen = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde-wasm-bindgen = "0.6.5"
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
pqc_kyber = { version = "0.7.1", features = ["kyber768", "90s"] }
sha2 = "0.10.9"
hkdf = "0.12.4"
getrandom = { version = "0.2", features = ["js"] }
rand_core = "0.6"